# telemedidea

./: .gitmodules  CMakeLists.txt  README.md  draft.cxx
libICA/src/: libICA.c
